--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -1,4 +1,4 @@
-name: Deploy SAS Model to Databricks
+name: Deploy SAS Model to Databricks with Embedded Process
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
     paths:
       - "data/**"
       - "models/**"
-      - "scripts/**"
 
 jobs:
   deploy:
@@ -16,15 +15,6 @@ jobs:
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v3
-
-      - name: 🛠️ Print Environment Variables (Debug)
-        env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
-        run: |
-          echo "🔹 Checking Databricks Environment Variables..."
-          echo "DATABRICKS_HOST is set (masked)"
-          echo "DATABRICKS_JOB_ID is set to: ${DATABRICKS_JOB_ID}"
 
       - name: 📂 Install Databricks CLI
         run: |
@@ -36,84 +26,17 @@ jobs:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
-          echo "🔹 Setting up Databricks CLI..."
-
-          if [[ -z "$DATABRICKS_HOST" ]]; then
-            echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1
-          fi
-          if [[ -z "$DATABRICKS_TOKEN" ]]; then
-            echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1
-          fi
-
-          echo "🔹 Exporting Databricks credentials..."
           export DATABRICKS_HOST=$DATABRICKS_HOST
           export DATABRICKS_TOKEN=$DATABRICKS_TOKEN
-
-          echo "🔹 Testing Databricks connection..."
           databricks clusters list
-        shell: bash
 
-      - name: 📤 Upload Data to Databricks
-        env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+      - name: 📤 Upload Model and Data to Databricks
         run: |
-          echo "🚀 Uploading dataset.csv..."
+          databricks fs cp --overwrite models/train_model.ds2 dbfs:/mnt/models/train_model.ds2
           databricks fs cp --overwrite data/dataset.csv dbfs:/mnt/datasets/dataset.csv
-          echo "✅ dataset.csv uploaded!"
 
-          echo "🚀 Uploading model_predictions.csv..."
-          databricks fs cp --overwrite data/model_predictions.csv dbfs:/mnt/datasets/model_predictions.csv
-          echo "✅ model_predictions.csv uploaded!"
-        shell: bash
-
-      - name: 📤 Upload Scripts to Databricks (Overwrite train_model.py)
+      - name: 🚀 Run Databricks Job with SAS Embedded Process
         env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        run: |
-          upload_script() {
-            local script_path=$1
-            local workspace_path=$2
-            local overwrite=$3
-
-            echo "🚀 Uploading ${script_path}..."
-            if [[ "$overwrite" == "true" ]]; then
-              databricks workspace import --format SOURCE --language PYTHON --overwrite "${script_path}" "${workspace_path}"
-            else
-              if databricks workspace ls "$(dirname ${workspace_path})" | grep -q "$(basename ${workspace_path})"; then
-                echo "✅ ${workspace_path} already exists. Skipping upload."
-              else
-                databricks workspace import --format SOURCE --language PYTHON "${script_path}" "${workspace_path}"
-              fi
-            fi
-            echo "✅ ${workspace_path} uploaded successfully!"
-          }
-
-          # Subir archivos sin sobreescribir
-          upload_script "scripts/data_preparation.py" "/Workspace/data_preparation.py" "false"
-          upload_script "scripts/feature_engineering.py" "/Workspace/feature_engineering.py" "false"
-
-          # CREAR CARPETA /Workspace/models/ SI NO EXISTE
-          echo "🔹 Checking if /Workspace/models exists..."
-          if ! databricks workspace ls /Workspace | grep -q "models"; then
-            echo "🚀 Creating /Workspace/models directory..."
-            databricks workspace mkdirs /Workspace/models
-            echo "✅ /Workspace/models created!"
-          else
-            echo "✅ /Workspace/models already exists."
-          fi
-
-          # Subir modelo de entrenamiento y sobreescribir SIEMPRE
-          upload_script "models/train_model.py" "/Workspace/models/train_model.py" "true"
-        shell: bash
-
-      - name: 🚀 Run Databricks Job
-        env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
         run: |
-          echo "🔹 Running Databricks Job with ID: ${DATABRICKS_JOB_ID}"
           databricks jobs run-now --job-id ${DATABRICKS_JOB_ID}
-        shell: bash
