--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -1,4 +1,4 @@
-name: Deploy SAS Model to Databricks with Embedded Process
+name: Deploy SAS Model to Databricks
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
     paths:
       - "data/**"
       - "models/**"
+      - "scripts/**"
 
 jobs:
   deploy:
