--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -1,4 +1,4 @@
-name: Deploy SAS Model to Databricks
+name: Deploy SAS Model to Databricks with Embedded Process
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
     paths:
       - "data/**"
       - "models/**"
-      - "scripts/**"
 
 jobs:
   deploy:
@@ -16,6 +15,15 @@ jobs:
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v3
+
+      - name: 🛠️ Print Environment Variables (Debug)
+        env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
+        run: |
+          echo "🔹 Checking Databricks Environment Variables..."
+          echo "DATABRICKS_HOST is set (masked)"
+          echo "DATABRICKS_JOB_ID is set to: ${DATABRICKS_JOB_ID}"
 
       - name: 📂 Install Databricks CLI
         run: |
@@ -27,17 +35,38 @@ jobs:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
+          echo "🔹 Setting up Databricks CLI..."
+
+          if [[ -z "$DATABRICKS_HOST" ]]; then
+            echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1
+          fi
+          if [[ -z "$DATABRICKS_TOKEN" ]]; then
+            echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1
+          fi
+
+          echo "🔹 Exporting Databricks credentials..."
           export DATABRICKS_HOST=$DATABRICKS_HOST
           export DATABRICKS_TOKEN=$DATABRICKS_TOKEN
+
+          echo "🔹 Testing Databricks connection..."
           databricks clusters list
+        shell: bash
 
       - name: 📤 Upload Model and Data to Databricks
         run: |
+          echo "🚀 Uploading train_model.ds2..."
           databricks fs cp --overwrite models/train_model.ds2 dbfs:/mnt/models/train_model.ds2
+          echo "✅ train_model.ds2 uploaded!"
+
+          echo "🚀 Uploading dataset.csv..."
           databricks fs cp --overwrite data/dataset.csv dbfs:/mnt/datasets/dataset.csv
+          echo "✅ dataset.csv uploaded!"
+        shell: bash
 
       - name: 🚀 Run Databricks Job with SAS Embedded Process
         env:
           DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
         run: |
+          echo "🔹 Running Databricks Job with ID: ${DATABRICKS_JOB_ID}"
           databricks jobs run-now --job-id ${DATABRICKS_JOB_ID}
+        shell: bash
