--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -19,38 +19,30 @@ jobs:
       - name: 🛠️ Print Environment Variables (Debug)
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
           echo "🔹 Checking Databricks Environment Variables..."
-          echo "DATABRICKS_HOST is set (masked)"
-          echo "DATABRICKS_JOB_ID is set to: ${DATABRICKS_JOB_ID}"
+          if [[ -z "$DATABRICKS_HOST" ]]; then echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1; fi
+          if [[ -z "$DATABRICKS_TOKEN" ]]; then echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1; fi
+          echo "✅ Databricks credentials are set."
 
       - name: 📂 Install Databricks CLI
         run: |
           pip install --upgrade databricks-cli
           databricks --version
 
-      - name: 🔍 Configure Databricks CLI
+      - name: 🔑 Configure Databricks CLI (Non-Interactive)
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
-          echo "🔹 Setting up Databricks CLI..."
-
-          if [[ -z "$DATABRICKS_HOST" ]]; then
-            echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1
-          fi
-          if [[ -z "$DATABRICKS_TOKEN" ]]; then
-            echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1
-          fi
-
-          echo "🔹 Exporting Databricks credentials..."
-          export DATABRICKS_HOST=$DATABRICKS_HOST
-          export DATABRICKS_TOKEN=$DATABRICKS_TOKEN
-
-          echo "🔹 Testing Databricks connection..."
-          databricks clusters list
-        shell: bash
+          echo "🔹 Configuring Databricks CLI..."
+          mkdir -p ~/.databricks
+          echo "[DEFAULT]" > ~/.databricks/config
+          echo "host = $DATABRICKS_HOST" >> ~/.databricks/config
+          echo "token = $DATABRICKS_TOKEN" >> ~/.databricks/config
+          chmod 600 ~/.databricks/config
+          echo "✅ Databricks CLI configured successfully!"
 
       - name: 📤 Upload Model and Data to Databricks
         run: |
@@ -68,4 +60,3 @@ jobs:
         run: |
           echo "🔹 Running Databricks Job with ID: ${DATABRICKS_JOB_ID}"
           databricks jobs run-now --job-id ${DATABRICKS_JOB_ID}
-        shell: bash
