--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -1,4 +1,4 @@
-name: Deploy SAS Model to Databricks with Embedded Process
+name: Deploy SAS Model to Databricks
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
     paths:
       - "data/**"
       - "models/**"
+      - "scripts/**"
 
 jobs:
   deploy:
@@ -16,45 +17,59 @@ jobs:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v3
 
-      - name: 🛠️ Validate Databricks Environment Variables
+      - name: 🛠️ Print Environment Variables (Debug)
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
         run: |
-          echo "🔹 Validating Databricks Credentials..."
-          if [[ -z "$DATABRICKS_HOST" ]]; then echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1; fi
-          if [[ -z "$DATABRICKS_TOKEN" ]]; then echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1; fi
-          if [[ -z "$DATABRICKS_JOB_ID" ]]; then echo "❌ ERROR: DATABRICKS_JOB_ID is not set!" && exit 1; fi
-          echo "✅ Databricks credentials are correctly set."
+          echo "🔹 Checking Databricks Environment Variables..."
+          echo "DATABRICKS_HOST is set (masked)"
+          echo "DATABRICKS_JOB_ID is set to: ${DATABRICKS_JOB_ID}"
 
       - name: 📂 Install Databricks CLI
         run: |
           pip install --upgrade databricks-cli
           databricks --version
 
-      - name: 🔑 Configure Databricks CLI
+      - name: 🔍 Configure Databricks CLI
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
-          echo "🔹 Configuring Databricks CLI..."
-          databricks configure --host "$DATABRICKS_HOST" --token "$DATABRICKS_TOKEN"
-          echo "✅ Databricks CLI configured successfully!"
+          echo "🔹 Setting up Databricks CLI..."
 
-      - name: 📤 Upload Model and Dataset to Databricks
+          if [[ -z "$DATABRICKS_HOST" ]]; then
+            echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1
+          fi
+          if [[ -z "$DATABRICKS_TOKEN" ]]; then
+            echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1
+          fi
+
+          echo "🔹 Exporting Databricks credentials..."
+          export DATABRICKS_HOST=$DATABRICKS_HOST
+          export DATABRICKS_TOKEN=$DATABRICKS_TOKEN
+
+          echo "🔹 Testing Databricks connection..."
+          databricks clusters list
+        shell: bash
+
+      - name: 📤 Upload Data to Databricks
+        env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
-          echo "🚀 Uploading train_model.ds2..."
-          databricks fs cp --overwrite models/train_model.ds2 dbfs:/mnt/models/train_model.ds2
-          echo "✅ train_model.ds2 uploaded!"
-
           echo "🚀 Uploading dataset.csv..."
           databricks fs cp --overwrite data/dataset.csv dbfs:/mnt/datasets/dataset.csv
           echo "✅ dataset.csv uploaded!"
 
-      - name: 🚀 Run Databricks Job with SAS Embedded Process
+        shell: bash
+
+      - name: 🚀 Run Databricks Job
         env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
         run: |
           echo "🔹 Running Databricks Job with ID: ${DATABRICKS_JOB_ID}"
           databricks jobs run-now --job-id ${DATABRICKS_JOB_ID}
+        shell: bash
