--- a/.github/workflows/deploy-to-databricks.yml
+++ b/.github/workflows/deploy-to-databricks.yml
@@ -37,15 +37,6 @@ jobs:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
           echo "🔹 Setting up Databricks CLI..."
-
-          if [[ -z "$DATABRICKS_HOST" ]]; then
-            echo "❌ ERROR: DATABRICKS_HOST is not set!" && exit 1
-          fi
-          if [[ -z "$DATABRICKS_TOKEN" ]]; then
-            echo "❌ ERROR: DATABRICKS_TOKEN is not set!" && exit 1
-          fi
-
-          echo "🔹 Exporting Databricks credentials..."
           export DATABRICKS_HOST=$DATABRICKS_HOST
           export DATABRICKS_TOKEN=$DATABRICKS_TOKEN
 
@@ -53,7 +44,7 @@ jobs:
           databricks clusters list
         shell: bash
 
-      - name: 📤 Upload Data to Databricks
+      - name: 📤 Upload Data and Model to Databricks
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
@@ -62,33 +53,16 @@ jobs:
           databricks fs cp --overwrite data/dataset.csv dbfs:/mnt/datasets/dataset.csv
           echo "✅ dataset.csv uploaded!"
 
-        shell: bash
+          echo "🚀 Uploading train_model.ds2..."
+          databricks fs cp --overwrite models/train_model.ds2 dbfs:/mnt/models/train_model.ds2
+          echo "✅ train_model.ds2 uploaded!"
 
-      - name: 📤 Upload Model and Scripts to Databricks
-        env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        run: |
-          echo "🚀 Uploading train_model.py..."
-          databricks workspace import --format SOURCE --language PYTHON models/train_model.py /Workspace/models/train_model.py
-          echo "✅ train_model.py uploaded!"
-
-          echo "🚀 Uploading feature_engineering.py..."
-          databricks workspace import --format SOURCE --language PYTHON models/feature_engineering.py /Workspace/models/feature_engineering.py
-          echo "✅ feature_engineering.py uploaded!"
-
-          echo "🚀 Uploading evaluate_model.py..."
-          databricks workspace import --format SOURCE --language PYTHON models/evaluate_model.py /Workspace/models/evaluate_model.py
-          echo "✅ evaluate_model.py uploaded!"
-        shell: bash
-
-
-      - name: 🚀 Run Databricks Job
+      - name: 🚀 Run Databricks Job with SAS Embedded Process
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           DATABRICKS_JOB_ID: ${{ secrets.DATABRICKS_JOB_ID }}
         run: |
-          echo "🔹 Running Databricks Job with ID: ${DATABRICKS_JOB_ID}"
+          echo "🔹 Running Databricks Job with SAS Embedded Process..."
           databricks jobs run-now --job-id ${DATABRICKS_JOB_ID}
         shell: bash
